About activity fixes

--- a/wallet/res/xml/about.xml
+++ b/wallet/res/xml/about.xml
@@ -19,10 +19,10 @@
 		<Preference
 			android:key="about_source"
 			android:title="@string/about_source_title" />
-		<Preference
+		<!--<Preference
 			android:key="about_market_app"
 			android:summary="@string/about_market_app_summary"
-			android:title="@string/about_market_app_title" />
+			android:title="@string/about_market_app_title" />-->
 		<!--Preference
 			android:key="about_credits_icon"
 			android:title="@string/about_credits_icon_title" /-->
