--- a/wallet/res/layout/tutorweb_spend.xml
+++ b/wallet/res/layout/tutorweb_spend.xml
@@ -1,12 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="fill_parent"
+    android:weightSum="1">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="You can now play the Smiley Bubble game on android and use your smileycoins to buy in-game items! Click the button down below to try out the game."
+        android:id="@+id/textView8"
+        android:layout_margin="15dp"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Smiley Bubble!"
+        android:id="@+id/button"
+        android:layout_gravity="center_horizontal"
+        style="@style/TutorWebButtons"
+        android:onClick="openPlaystore"
+        android:padding="20dp"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.96" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/spend_url"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_gravity="bottom"
+        android:onClick="openPlaystore"
+        android:gravity="bottom"
         android:id="@+id/spending_smly_url" />
 </LinearLayout>
