--- a/wallet/res/layout/send_message_activity.xml
+++ b/wallet/res/layout/send_message_activity.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
-        android:id="@+id/textView"
+        android:id="@+id/message_view"
         android:layout_weight="0.43" />
 
     <TextView
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Send this message for 10.10 SMLY"
-        android:id="@+id/textView2"
+        android:id="@+id/message_cost_view"
         android:layout_weight="0.03" />
 
     <Space
