--- a/wallet/res/layout/send_message.xml
+++ b/wallet/res/layout/send_message.xml
@@ -45,6 +45,7 @@
         android:layout_height="wrap_content"
         android:text="Send"
         android:id="@+id/sendBtn"
+        style="@style/TutorWebButtons"
         android:layout_gravity="bottom" />
 
 </LinearLayout>
