--- a/wallet/res/layout/send_message_activity.xml
+++ b/wallet/res/layout/send_message_activity.xml
@@ -47,5 +47,6 @@
         android:layout_height="wrap_content"
         android:text="Send Message"
         android:id="@+id/sendBtn"
+        style="@style/TutorWebButtons"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
