--- a/wallet/res/layout/send_message_fragment.xml
+++ b/wallet/res/layout/send_message_fragment.xml
@@ -90,7 +90,7 @@
 	</LinearLayout>
 
 	<EditText
-		android:id="@+id/message_content"
+		android:id="@+id/message_view"
 		android:layout_width="match_parent"
 		android:layout_height="300dp"
 		android:layout_marginTop="8dp"
